# region-dealias

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
benchmarks/: benchmark_derecho.py  results_derecho_2023.json
crates/core/: Cargo.toml
crates/core/src/: edges.rs  label.rs  lib.rs  network.rs  regions.rs  util.rs
crates/py/: Cargo.toml
crates/py/src/: lib.rs
python/region_dealias/: __init__.py
tests/: pyart_ref.py  test_parity.py  test_pyart_parity.py
