[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "region-dealias"
version = "0.1.0"
description = "Fast region-based Doppler velocity dealiasing (Rust port of Py-ART's dealias_region_based core)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Steve Nesbitt" }]
dependencies = ["numpy"]

[project.urls]
Repository = "https://github.com/swnesbitt/region-dealias"

[tool.maturin]
manifest-path = "crates/py/Cargo.toml"
module-name = "region_dealias._region_dealias"
python-source = "python"
features = ["pyo3/extension-module"]
