[package]
name = "region-dealias-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for region-dealias-core."

[lib]
name = "_region_dealias"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
region-dealias-core = { path = "../core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
